# QuicDemo

./: README.md
app/: CMakeCache.txt  CMakeLists.txt  Makefile  build.gradle  cmake_install.cmake
app/src/androidTest/java/com/example/zhangchi09/myapplication/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/zhangchi09/myapplication/: MainActivity.java  NetUtils.java
app/src/main/jni/src/: NetJni.cpp
app/src/main/jni/src/tools/quic/: chlo_extractor.cc  quic_al_client.cc  quic_al_client.h  quic_al_client_session.cc  quic_al_client_session.h  quic_al_client_stream.cc  quic_al_client_stream.h  quic_client_base.cc  quic_client_base.h  quic_client_message_loop_network_helper.cc  quic_client_message_loop_network_helper.h  quic_dispatcher.cc  quic_dispatcher.h  quic_http_response_cache.cc  quic_per_connection_packet_writer.cc  quic_simple_client.cc  quic_simple_client.h  quic_simple_crypto_server_stream_helper.cc  quic_simple_dispatcher.cc  quic_simple_dispatcher.h  quic_simple_per_connection_packet_writer.cc  quic_simple_server.cc  quic_simple_server.h  quic_simple_server_packet_writer.cc  quic_simple_server_session.cc  quic_simple_server_session.h  quic_simple_server_session_helper.cc  quic_simple_server_stream.cc  quic_simple_server_stream.h  quic_spdy_client_base.cc  quic_spdy_client_base.h  quic_spdy_client_session.cc  quic_spdy_client_session.h  quic_spdy_client_stream.cc  quic_spdy_server_stream_base.cc  quic_time_wait_list_manager.cc  stateless_rejector.cc  synchronous_host_resolver.cc
app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml  activity_mainactivity.xml
app/src/test/java/com/example/zhangchi09/myapplication/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
